k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youtube-clone-service
  namespace: youtube
spec:
  selector:
    app: youtube
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081
